sass/modules/_loader.scss
.loader {
  display: block;
  height: 80px;
  width: 80px;
  position: fixed;
  right: 50px;
  bottom: 50px;

  .circle {
    display:block;
    position: absolute;
    left: 0;
    top:0;
    width: 100%;
    height: 100%;
    background: #FFF;
    border-radius: 50%;
    transition: all 180ms linear;
    opacity: 0;
    transform: translateY(0%);

    &:after {
      content: '';
      display:block;
      position: absolute;
      width: 30px;
      height: 30px;
      border: 3px solid #41586e;
      border-radius: 50%;
      border-left-color: transparent;
      border-top-color: transparent;
      left: 50%;
      top: 50%;
      transform: translate3d(-50%,-50%,0);
      animation: rotate 1.5s linear infinite;
    }

    &:before {
      content: '';
      display:block;
      position: absolute;
      width: 30px;
      height: 30px;
      border: 3px solid #efefef;
      border-radius: 50%;
      left: 50%;
      top: 50%;
      transform: translate3d(-50%,-50%,0);
    }
  }

  &.visible {
    .circle {
      opacity: 1;
      animation: bounce 250ms cubic-bezier(0.5, 1.25, 0.5, 1.25);
    }
  }
}

